[package]
name = "pulse"
version = "0.2.0"
description = "A Tauri App"
authors = ["AsianIntel"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pulse_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
keyring = { version = "4.0.0-alpha.1", features = [] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0"
rowifi_roblox_models = { branch = "feature/datastores", git = "https://github.com/RoWifi-HQ/RoWifi-V4" }
rowifi_roblox = { branch = "feature/datastores", git = "https://github.com/RoWifi-HQ/RoWifi-V4" }
urlencoding = "2"
